# ThermoNet

./: README.md  claude.txt  demo-quick.sh  demo-simple.sh  demo.sh  install-deps.sh
android/app/: build.gradle.kts
demo-frontend/: index.html
frontend/: package-simple.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.js  index.css
frontend/src/components/: Analytics.js  Dashboard.js  DeviceSettings.js  Header.js  TemperatureMap.js
frontend/src/utils/: mockData.js
mobile-demo/: BUILD-APK-GUIDE.md  DEMO-SETUP.md  PHONE-TO-CLOUD-SETUP.md  README.md  apk-api.js  app.js  build-simple-apk.sh  capacitor.config.ts  convert-to-apk.md  create-apk-download.js  demo-server.js  deploy-to-vercel.md  generate-apk.js  generate-real-apk.sh  index.html  install-apk-tools.sh  manifest.json  mobile-simple.html  package-lock.json  package.json  start-for-mobile.sh  styles.css  sw.js  vercel.json
mobile-demo/android/app/: build.gradle
mobile-demo/android/app/src/main/res/values/: strings.xml
mobile-demo/api/: index.js
mobile-demo/apk-build/: APK-BUILD-INSTRUCTIONS.md  temp-manifest.json
mobile-demo/apk-output/: APK-GENERATION-GUIDE.md
mobile-demo/apk-output/android-project/: AndroidManifest.xml  build.gradle
mobile-demo/public/: app.js  download-apk.html  real-phone-app.html  styles.css  sw.js
mobile-demo/public/icons/: generate-icons.md
mobile-demo/thermonet-apk/: build-apk.html
programs/thermo-net/: Cargo.toml
programs/thermo-net/src/: lib.rs
scripts/: seed-demo-data.js
(+7 files in other folders)
